--- a/restaurant-menu-filter-page-Jeriks_Giftson/style.css
+++ b/restaurant-menu-filter-page-Jeriks_Giftson/style.css
@@ -53,7 +53,8 @@ img{
     border-radius: 20%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin: 10px;
-    border: dotted 2px #3A3F1F;
+    border: 2px #3A3F1F;
+    border:dotted;
 }
 img:hover{
     transform: scale(1.1);
@@ -82,6 +83,10 @@ img:hover{
     background-color: #ff9900;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     max-width: 200px;
+}
+.food-item:hover{
+    transform: scale(1.05);
+    transition: 0.3s;
 }
 .foodimg{
     height: 100px;
